--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
