--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0"
